--- a/css/styles.css
+++ b/css/styles.css
@@ -27,40 +27,158 @@ li {
   list-style: none;
 }
 
+img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
 body {
   font-family: 'Barlow', sans-serif;
   font-weight: 600;
   font-size: 18px;
 }
 
-.header{
-
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
 }
+
+/*--------------HEADER------------*/
+
+.header{
+  height: 800px;
+  background-image: url(../images/desktop/image-header.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
 .header__logo {
 
 }
+
 .header__navlist {
 
 }
 .header__item {
 
 }
+
 .header__link {
 
 }
+
+.header__menu-btn {
+  display: none;
+}
+
+.header__menu {
+  display: none;
+
+}
+
 .main {
 
 }
+
 .hero {
-    background: rgb(0, 0, 0);
+  
+  
 
 }
+
 .hero__title {
 
 }
+
 .hero__arrow {
    
 }
+
+/*--------------ABOUT------------*/
+
+.about {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.about div {
+  width: 50%;
+}
+
+/*--------------SERVICES------------*/
+.services{
+  display: flex;
+  
+}
+
+.services__design{
+
+  width: 50%;
+  height: 600px;
+  background-image: url(../images/desktop/image-graphic-design.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.services__photography{
+
+  width: 50%;
+  height: 600px;
+  background-image: url(../images/desktop/image-photography.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  
+}
+
+/*--------------TESTIMONIALS------------*/
+.testimonials {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.testimonials ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.testimonials ul li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 25%;
+
+}
+
+.testimonials ul li img {
+  width: 50px;
+  border-radius: 50%;
+}
+
+/*--------------PROJECTS------------*/
+
+.projects{
+
+}
+
+.projects__gallery {
+  display: flex;
+}
+
+.projects__gallery ul li {
+  width: calc(100%/4);
+}
+
+/*--------------FOOTER------------*/
+
+.footer { 
+ background-color: var(--dark-moderate-cyan);
+}
+
 /* # Front-end Style Guide
 
 ## Layout
